- Added `wcag.js` to handle loading and displaying WCAG data on the `wcag.html` page. - Implemented `loadWCAGData` function to fetch WCAG data from `wcag.json`. - Implemented `displayWCAG` function to dynamically create and display WCAG guidelines on the page. - Added `wcag.json` containing a list of WCAG guidelines and descriptions.

--- a/HTML/contact.html
+++ b/HTML/contact.html
@@ -20,6 +20,7 @@
                 <li><a href="/HTML/portfolio.html">Portfolio</a></li>
                 <li><a href="/HTML/about.html">About</a></li>
                 <li class="active"><a href="/HTML/contact.html">Contact</a></li>
+                <li><a href="/HTML/wcag.html">WCAG</a></li>
             </ul>
         </nav>
     </header>
@@ -37,20 +38,20 @@
             <div class="contact-box">
                 <ul>
                     <li>
-                        <a href="mailto:daniel.sidstedt@gmail.com" target="_blank">
+                        <a href="mailto:daniel.sidstedt@gmail.com" target="_blank" aria-label="Send an email">
                         <i class="fa-solid fa-envelope"></i> Email</a>
                     </li>
                     <li>
-                        <a href="https://www.linkedin.com/in/daniel-sidstedt/" target="_blank">
+                        <a href="https://www.linkedin.com/in/daniel-sidstedt/" target="_blank" aria-label="LinkedIn profile">
                         <i class="fa-brands fa-linkedin"></i> LinkedIn</a>
                     </li>
                     <li>
-                        <a href="https://github.com/sidstedt" target="_blank">
+                        <a href="https://github.com/sidstedt" target="_blank" aria-label="Github profile">
                         <i class="fa-brands fa-square-github"></i> Github</a>
                     </li>
                     <li>
-                        <i class="fa-solid fa-phone"></i>
-                        +46 737 41 13 11
+                        <a href="tel:+46737411311" aria-label="Call me">
+                        <i class="fa-solid fa-phone"></i> +46 737 41 13 11</a>
                     </li>
                 </ul>
             </div>
