--- a/HTML/portfolio.html
+++ b/HTML/portfolio.html
@@ -20,6 +20,7 @@
                 <li class="active"><a href="/HTML/portfolio.html">Portfolio</a></li>
                 <li><a href="/HTML/about.html">About</a></li>
                 <li><a href="/HTML/contact.html">Contact</a></li>
+                <li><a href="/HTML/wcag.html">WCAG</a></li>
             </ul>
         </nav>
     </header>
@@ -33,6 +34,7 @@
             </div>
         </aside>
         <div class="right-side" id="main-content">
+            <h2>My Work & Projects</h2>
             <!-- Dynamically imported portfolio from github -->
         </div>
     </main>
