--- a/HTML/wcag.html
+++ b/HTML/wcag.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="sv">
 <head>
     <link href="/CSS/style.css" rel="stylesheet">
     <link href="/CSS/print.css" media="print" rel="stylesheet">
@@ -8,7 +8,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Syne:wght@400..800&display=swap" rel="stylesheet">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>About | Who I Am</title>
+    <title>WCAG | Compliance</title>
 </head>
 <body>
     <a href="#main-content" class="skip-link">Skip to main content</a>
@@ -18,33 +18,29 @@
                 <li><a href="/index.html">Home</a></li>
                 <li><a href="/HTML/resume.html">Resume</a></li>
                 <li><a href="/HTML/portfolio.html">Portfolio</a></li>
-                <li class="active"><a href="/HTML/about.html">About</a></li>
+                <li><a href="/HTML/about.html">About</a></li>
                 <li><a href="/HTML/contact.html">Contact</a></li>
-                <li><a href="/HTML/wcag.html">WCAG</a></li>
+                <li class="active"><a href="/HTML/wcag.html">WCAG</a></li>
             </ul>
         </nav>
     </header>
     <main class="container">
         <aside class="left-side">
             <h1>
-                About Me
+                WCAG Compliance
             </h1>
             <div class="img-container">
-                <img class="img-content" src="/IMG/aboutme.jpg" alt="A picture resembles a man with mustasch, glasses and a hat">
+                <img class="img-content" src="/IMG/wcag2.jpg" alt="A picture resembles a man with mustasch, glasses and a hat">
             </div>
         </aside>
         <div class="right-side" id="main-content">
-            <article>
-                <h2>A little bit of lorem ipsum</h2>
-                <p>
-                    Lorem ipsum dolor, sit amet consectetur adipisicing elit.
-                    Delectus culpa ullam ipsam laudantium sapiente molestias aut praesentium nobis cum, beatae saepe consequatur quasi!
-                    Labore beatae nisi, impedit nemo ab modi assumenda suscipit aliquid, quos temporibus error iure distinctio eveniet! Libero?      
-                </p>
-            </article>
+            <section id="wcag-section">
+                <!-- My WCAG document will be loaded here -->
+            </section>
         </div>
     </main>
     <script src="/JS/scripts.js"></script>
     <script src="/JS/easteregg.js"></script>
+    <script src="/JS/wcag.js"></script>
 </body>
 </html>
