--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
                 <li><a href="/HTML/portfolio.html">Portfolio</a></li>
                 <li><a href="/HTML/about.html">About</a></li>
                 <li><a href="/HTML/contact.html">Contact</a></li>
+                <li><a href="/HTML/wcag.html">WCAG</a></li>
             </ul>
         </nav>
     </header>
